@@ -838,6 +838,12 @@ whole pages to be written to AVR flash memory at once, resulting in a
 significant write speed increase. If use of this mode is not desirable for some
 reason, this option disables it.
 
+@item @samp{nopagedread}
+Newer firmware versions support in binary mode SPI command some AVR Extended 
+Commands. Using the ``Bulk Memory Read from Flash'' results in a
+significant read speed increase. If use of this mode is not desirable for some
+reason, this option disables it.
+
 @item @samp{cpufreq=@var{125..4000}}
 This sets the @emph{AUX}  pin to output a frequency of @var{n} kHz. Connecting
 the @emph{AUX} pin to the XTAL1 pin of your MCU, you can provide it a clock, 
